<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="main_text">NMedia!</string>
    <string name="headerText">Netology. Online University</string>
    <string name="timeTextview">23 May, 18:36</string>
    <string name="likesNum" translatable="false">5</string>
    <string name="repostNum" translatable="false">2</string>
    <string name="seenNum" translatable="false">500 K</string>
    <string name="longTexview">" Помогаем расти в профессии и открывать новые карьерные горизонты💫\n\n
        Нетология — это 4 уровня образования:\n\n
        ✅ для начинающих, которые хотят освоить актуальную профессию с нуля
        ✅ для специалистов, которые стремятся вырасти в карьере
        ✅ для руководителей, которые нацелены усилить лидерские навыки
        ✅ и для компаний, которым нужно обучить команду
        Маркетинг, дизайн, программирование, soft skills, MBA, управление проектами, аналитика и data science — выбирайте,
        что вам ближе и приходите к нам за знаниями и ростом.\n\n
        Перемены — всегда правильный выбор👌🏻   http://netolo.gy/fEU "</string>

    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_seen">Seen</string>
    <string name="description_post_save">Save</string>

    <string name="error_empty_content">Content cannot be empty</string>
    <string name="post_text">Enter text here</string>
    <string name="editText">Edit Message</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="add_post">Add post</string>
    <string name="chooser_share_post">Share post</string>


</resources>