<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:padding="@dimen/common_spacing">

<ImageView
    android:id="@+id/icon_imageView"
    app:layout_constraintBottom_toBottomOf="@id/header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:srcCompat="@sample/posts.json/data/authorAvatar"
    android:layout_width="@dimen/posts_avatar_size"
    android:layout_height="@dimen/posts_avatar_size"
    android:layout_marginBottom="@dimen/common_spacing"
    android:contentDescription="@string/description_post_author_avatar"
    android:src="@drawable/ic_netology_logo_foreground" />

<TextView
    android:id="@+id/headerTextView"
    app:layout_constraintBottom_toTopOf="@+id/timeTextView"
    app:layout_constraintEnd_toStartOf="@id/moreButton"
    app:layout_constraintStart_toEndOf="@id/icon_imageView"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed"
    tools:text="@sample/posts.json/data/author"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_spacing"
    android:layout_marginEnd="@dimen/common_spacing"
    android:ellipsize="end"
    android:singleLine="true" />

<TextView
    android:id="@+id/timeTextView"
    app:layout_constraintBottom_toBottomOf="@id/header"
    app:layout_constraintEnd_toStartOf="@id/moreButton"
    app:layout_constraintStart_toEndOf="@id/icon_imageView"
    app:layout_constraintTop_toBottomOf="@id/icon_imageView"
    tools:text="@sample/posts.json/data/published"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_spacing"
    android:layout_marginEnd="@dimen/common_spacing"
    android:layout_marginBottom="@dimen/common_spacing" />

<ImageButton
    android:id="@+id/moreButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_baseline_more_vert_24"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/common_spacing"
    android:background="@android:color/transparent"
    android:contentDescription="@string/description_post_menu" />

<androidx.constraintlayout.widget.Barrier
    android:id="@+id/header"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="icon_imageView,timeTextView,moreButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<TextView
    android:id="@+id/longTextView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/header"
    tools:text="@sample/posts.json/data/content"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:autoLink="web"
    android:lineSpacingMultiplier="1.5"
    android:paddingTop="@dimen/common_spacing"
    android:paddingBottom="@dimen/common_spacing" />

<androidx.constraintlayout.widget.Barrier
    android:id="@+id/footer"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="longTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<ImageButton
    android:id="@+id/likeButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/footer"
    app:srcCompat="@drawable/ic_baseline_favorite_border_24"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/common_spacing"
    android:background="@android:color/transparent"
    android:contentDescription="@string/description_post_like" />

    <TextView
        android:id="@+id/likesNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likesNum"
        app:layout_constraintBottom_toBottomOf="@+id/likeButton"
        app:layout_constraintStart_toEndOf="@+id/likeButton"
        app:layout_constraintTop_toTopOf="@+id/likeButton" />

<ImageButton
    android:id="@+id/repostButton"
    app:layout_constraintStart_toEndOf="@+id/likesNumTextView"
    app:layout_constraintTop_toBottomOf="@id/footer"
    app:srcCompat="@drawable/ic_baseline_share_24"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/common_spacing"
    android:layout_marginTop="@dimen/common_spacing"
    android:background="@android:color/transparent"
    android:contentDescription="@string/description_post_share" />

    <TextView
        android:id="@+id/repostNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repostNum"
        app:layout_constraintBottom_toBottomOf="@+id/repostButton"
        app:layout_constraintStart_toEndOf="@+id/repostButton"
        app:layout_constraintTop_toTopOf="@+id/repostButton" />

    <ImageButton
        android:id="@+id/seenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/repostNumTextView"
        app:layout_constraintStart_toEndOf="@+id/repostNumTextView"
        app:layout_constraintTop_toTopOf="@+id/repostNumTextView"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
        android:contentDescription="@string/description_post_seen"/>

    <TextView
        android:id="@+id/seenNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seenNum"
        app:layout_constraintBottom_toBottomOf="@+id/seenButton"
        app:layout_constraintStart_toEndOf="@+id/seenButton"
        app:layout_constraintTop_toTopOf="@+id/seenButton" />


</androidx.constraintlayout.widget.ConstraintLayout>